Fix mobile header layout issue

--- a/themes/linuscodes/static/css/components/_header.scss
+++ b/themes/linuscodes/static/css/components/_header.scss
@@ -138,7 +138,7 @@ header {
 }
 
 @media screen and (max-width: 1280px) {
-   .header-layout {
+   .has-header-layout header .header-layout {
       .item:nth-child(1) {
          min-height: 40vh;
       }
